--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "@mui/material": "^6.2.1",
     "@reduxjs/toolkit": "^2.5.0",
     "axios": "^1.7.9",
+    "dayjs": "^1.11.13",
     "prettier": "^3.4.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
